k8s/apps/portal/deployment.yaml
# yaml-language-server: $schema=../../../../schemas/k8s-v1.19.12/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal
  namespace: default
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: portal
  template:
    metadata:
      labels:
        name: portal
    spec:
      containers:
      - env:
        - name: PGID
          value: "100"
        - name: PUID
          value: "1032"
        - name: TZ
          value: America/New_York
        image: linuxserver/heimdall:2.2.2-ls70
        imagePullPolicy: IfNotPresent
        name: portal
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - mountPath: /config
          name: portal
        - mountPath: /logs
          name: logs
      volumes:
      - name: portal
        persistentVolumeClaim:
          claimName: portal2
      - emptyDir: {}
        name: logs
