k8s/apps/portal/service.yaml
# yaml-language-server: $schema=../../../schemas/k8s/service-v1.json
apiVersion: v1
kind: Service
metadata:
  labels:
    name: portal
  name: portal
  namespace: default
spec:
  ports:
  - name: portal-http
    port: 80
    targetPort: 80
  selector:
    name: portal
