k8s/apps/portal/ingress.yaml
# yaml-language-server: $schema=../../../schemas/k8s/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal
  namespace: default
spec:
  rules:
  - host: portal.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portal
            port:
              name: portal-http
  - host: portal.home.ericcodes.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portal
            port:
              name: portal-http
